<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/clear"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_margin="20dp"

        android:background="@drawable/back" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">


        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            android:layout_toEndOf="@+id/title_icon"
            android:hint="@string/title"
            android:padding="10dp"
            android:text="" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="3dp"
            android:src="@drawable/log" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/ed_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            android:layout_toEndOf="@+id/desc_icon"
            android:hint="@string/description"
            android:padding="10dp"

            android:text="" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/desc_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="3dp"
            android:src="@drawable/desc" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/date_icon"
            android:hint="@string/task_date"
            android:textColor="#000"

            android:textCursorDrawable="@null"
            android:textSize="20sp" />


        <!-- ICON -->
        <ImageView
            android:id="@+id/date_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="3dp"
            android:src="@drawable/date" />

    </RelativeLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/add_task" />
    </LinearLayout>


</LinearLayout>
